--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cripto-react-app",
   "version": "0.1.0",
-  "homepage":"http://JuanS79.github.io/React_cripto",
+  "homepage": "http://JuanS79.github.io/React_Cripto_App",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,8 +15,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
